regal-macros/tests/ui/invalid_priority.stderr
error: priority attribute expects #[priority = <int>]
 --> tests/ui/invalid_priority.rs:8:5
  |
8 |     #[priority("high")]
  |     ^
